Add delete message command
