# backend/docs/openapi/api.yaml
@@ -28,6 +28,13 @@ components:
         content:
           type: string
           example: Hello
+    DeleteMessage:
+      type: object
+      properties:
+        delete_date:
+          type: string
+          format: date-time
+          example: 2017-07-21T17:32:28Z
     Message:
       type: object
       properties:
@@ -73,11 +80,25 @@ paths:
       responses:
         '201':
           description: Sent the message
-#          content:
-#            application/json:
-#              schema:
-#                $ref: '#/components/schemas/Message'
   /messages/{id}:
+    get:
+      summary: Return a messages
+      parameters:
+        - name: id
+          in: path
+          description: ID of message to return
+          required: true
+          schema:
+            type: string
+            format: uuid
+          style: simple
+      responses:
+        '200':
+          description: Message with specified id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
     patch:
       summary: Update a message
       parameters:
@@ -98,10 +119,6 @@ paths:
       responses:
         '201':
           description: Updated the message
-#          content:
-#            application/json:
-#              schema:
-#                $ref: '#/components/schemas/Message'
     delete:
       summary: Delete a message
       parameters:
@@ -113,6 +130,12 @@ paths:
             type: string
             format: uuid
           style: simple
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DeleteMessage'
       responses:
         '204':
           description: Deleted the message
