# backend/src/main/java/org/faust/chat/message/MessageController.java
@@ -5,6 +5,7 @@ import org.faust.chat.access.AccessService;
 import org.faust.chat.api.MessagesApi;
 import org.faust.chat.message.command.MessageCommandService;
 import org.faust.chat.model.CreateMessage;
+import org.faust.chat.model.DeleteMessage;
 import org.faust.chat.model.EditMessage;
 import org.faust.chat.model.Message;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -14,7 +15,6 @@ import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.time.LocalDateTime;
-import java.time.OffsetDateTime;
 import java.util.UUID;
 
 // TODO: change implementation into CQRS
@@ -29,13 +29,16 @@ public class MessageController implements MessagesApi {
 
     private final MessageCommandService messageCommandService;
 
-    // this is fine? query would be required for a single message, maybe get history?
     @Override
     public Flux<Message> messagesGet(ServerWebExchange exchange) {
         return messageService.getMessages();
     }
 
-    // what can be changed? only message's text so only it can be sent, and maybe edit time?
+    @Override
+    public Mono<Message> messagesIdGet(UUID id, ServerWebExchange exchange) {
+        return null;
+    }
+
     @Override
     public Mono<Void> messagesIdPatch(UUID id, Mono<EditMessage> editMessage, ServerWebExchange exchange) {
         return editMessage
@@ -49,10 +52,8 @@ public class MessageController implements MessagesApi {
                                         message.getContent())
                                 ))
                 .flatMap(messageCommandService::editMessage);
-//        return messageService.updateMessage(id, message);
     }
 
-    // only date and text is required for post, the rest is set by server
     @Override
     public Mono<Void> messagesPost(Mono<CreateMessage> createMessage, ServerWebExchange exchange) {
         return createMessage
@@ -62,24 +63,24 @@ public class MessageController implements MessagesApi {
                                         UUID.randomUUID(), // TODO: CHANGE IT
                                         userId,
                                         message.getCreationDate().toLocalDateTime(),
+                                        LocalDateTime.now(),
                                         message.getContent()
-                        )))
+                                )))
                 .flatMap(messageCommandService::addMessage);
-//        return messageService.addMessage(accessService.addSenderIdToMessage(message));
     }
 
-    // this is correct, wrap into command? TO THINK
     @Override
-    public Mono<Void> messagesIdDelete(UUID id, ServerWebExchange exchange) {
-        return Mono.just(id)
-                .flatMap(messageId -> accessService.getRequesterId()
-                        .map(userId -> new org.faust.chat.message.command.model.DeleteMessage(
-                                messageId,
-                                userId,
-                                LocalDateTime.now(), // TODO: change to request
-                                LocalDateTime.now()
-                        )))
+    public Mono<Void> messagesIdDelete(UUID id, Mono<DeleteMessage> deleteMessage, ServerWebExchange exchange) {
+        return deleteMessage
+                .flatMap(
+                        message -> accessService.getRequesterId()
+                                .map(userId -> new org.faust.chat.message.command.model.DeleteMessage(
+                                        id,
+                                        userId,
+                                        message.getDeleteDate().toLocalDateTime(), // TODO: change to request
+                                        LocalDateTime.now())
+                                ))
                 .flatMap(messageCommandService::deleteMessage);
-//        return messageService.deleteMessage(id);
+
     }
 }
